# skillx

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  LICENSE-DOCS  README.md  SECURITY.md  deny.toml  install.sh
Formula/: skillx.rb
cli/: Cargo.toml  README.md
cli/src/: cache.rs  config.rs  error.rs  gate.rs  installed.rs  lib.rs  main.rs  project_config.rs  types.rs  ui.rs  update_check.rs
cli/src/agent/: amp.rs  claude_code.rs  cline.rs  codex.rs  copilot.rs  cursor.rs  gemini_cli.rs  generic.rs  mod.rs  opencode.rs  registry.rs  roo.rs  universal.rs  windsurf.rs
cli/src/commands/: agents.rs  cache.rs  info.rs  init.rs  install.rs  list.rs  mod.rs  run.rs  scan.rs  uninstall.rs  update.rs  upgrade.rs
cli/src/scanner/: binary_analyzer.rs  compiled_rules.rs  markdown_analyzer.rs  mod.rs  normalize.rs  report.rs  resource_analyzer.rs  rules.rs  script_analyzer.rs
cli/src/session/: cleanup.rs  inject.rs  manifest.rs  mod.rs
cli/src/source/: archive.rs  bitbucket.rs  gist.rs  git_clone.rs  gitea.rs  github.rs  gitlab.rs  huggingface.rs  local.rs  mod.rs  resolver.rs  skills_directory.rs  sourcehut.rs  url.rs  url_patterns.rs
cli/tests/: cli_parse_test.rs  command_tests.rs  e2e_tests.rs  evasion_tests.rs  source_tests.rs  unit_tests.rs
cli/tests/fixtures/binary-skill/: SKILL.md
cli/tests/fixtures/dangerous-skill/: SKILL.md
cli/tests/fixtures/dangerous-skill/scripts/: evil.sh
cli/tests/fixtures/minimal-skill/: SKILL.md
cli/tests/fixtures/valid-skill/: SKILL.md
cli/tests/fixtures/valid-skill/scripts/: process.py
registry/: README.md
(+95 files in other folders)
