[package]
name = "skillx"
version = "0.7.0"
edition = "2021"
description = "npx for Agent Skills — fetch, scan, inject, run, clean in one command"
license = "Apache-2.0"
repository = "https://github.com/skillx-run/skillx"
keywords = ["agent", "skills", "cli", "npx"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "skillx"
path = "src/main.rs"

[lib]
name = "skillx"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
regex = "1"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
dirs = "5"
thiserror = "2"
anyhow = "1"
async-trait = "0.1"
console = "0.15"
indicatif = "0.17"
dialoguer = "0.11"
infer = "0.16"
sysinfo = "0.32"
arboard = "3"
futures = "0.3"
base64 = "0.22"
which = "7"
semver = "1"
scraper = "0.21"
flate2 = "1"
tar = "0.4"
zip = "2"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/skillx-{ target }.tar.gz"
pkg-fmt = "tgz"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-url = "{ repo }/releases/download/v{ version }/skillx-{ target }.zip"
pkg-fmt = "zip"

[dev-dependencies]
tempfile = "3"
wiremock = "0.6"
assert_cmd = "2"
predicates = "3"
tokio-test = "0.4"
